<resources>
    <string name="app_name">LearnCzech</string>
    <string name="appname">Чеська мова А1</string>
    <string name="first_menu_button">Граматика</string>
    <string name="second_menu_button">Словник</string>
    <string name="buttoncheck">Перевірка знань</string>
    <string name="buttonaddition">Додатково</string>
    <string name="slova1_bttn">Товари та послуги</string>
    <string name="slova2_bttn">Кімната</string>
    <string name="slova3_bttn">Транспорт</string>
    <string name="slova4_bttn">Ванна і туалет</string>
    <string name="slova5_bttn">Кухня</string>
    <string name="slova6_bttn">Пори року і погода</string>
    <string name="slova7_bttn">Календар і час</string>
    <string name="slova8_bttn">Місто</string>
    <string name="slova9_bttn">Будинок</string>
    <string name="slova10_bttn">Служби екстреної допомоги</string>
    <string name="slova11_bttn">Банк</string>
    <string name="slova12_bttn">Їжа</string>
    <string name="slova13_bttn">Комп\'ютер</string>
    <string name="slova14_bttn">Сім\'я</string>
    <string name="slova15_bttn">Фрукти</string>
    <string name="slova16_bttn">Овочі</string>
    <string name="slova17_bttn">Тварини</string>
    <string name="slova18_bttn">Предмети</string>
    <string name="slova19_bttn">Одяг</string>
    <string name="slova20_bttn">Професії</string>
    <string name="selectategory">Виберіть категорію слів для перевірки:</string>
    <string name="pleaseenter">Введіть слово на чеській</string>
    <string name="answer">Відповісти</string>
    <string name="wordsearch">Пошук</string>
    <string name="section">Оберіть лекцію:</string>
    <string name="dictionarysearch">Пошук у словнику</string>
    <string name="extrainform1">Допоміжні сайти</string>
    <string name="extrainform2">Популярні виконавці</string>
    <string name="firstitem">cs.wiktionary.org</string>
    <string name="seconditem">filmyon.cz</string>
    <string name="thirditem">seznam.cz</string>
    <string name="fourthitem">ceskatelevize.cz</string>
    <string name="fifthitem">sledujufilmy.cz</string>
    <string name="firstdescription">- відмінювання слів</string>
    <string name="seconddescription">- фільми</string>
    <string name="thirddescription">- словник</string>
    <string name="firstsong">Xindl X</string>
    <string name="secondsong">Tomáš Klus</string>
    <string name="thirdsong">Kryštof</string>
    <string name="fourthsong">Daniel Landa</string>
    <string name="fifthsong">Tomáš Savka</string>
    <string name="sixthsong">Radůza</string>
    <string name="seventhsong">Karel Kryl</string>
    <string name="grammardescription">У цьому розділі Ви зможете обрати певну лекцію та скористатися правилами, які зазнічені у ній. Лекції містять в собі всю необхідну інформацію для вивчення чеської мови, починаючи з алфавіту.</string>
    <string name="dictionarydescription">У словнику Ви зможете обрати певну категорію в якій ознайомитись зі зазначеними словами. Кожна категорія містить оригінал слова та його переклад.</string>
    <string name="verificationdescription">Цей розділ допоможе Вам у перевірці знань, отриманих раніше або вивчених у попередньому розділі "\"Словник\"".</string>
    <string name="searchdescription">У розділі "\"Додатково\"" Ви зможете перейти до пошуку слів у словнику. Якщо ввести оригінал слова, то Ви отримаєте його правильний переклад.</string>
    <string name="searchdescription1">Також цей розділ містить в собі корисну інформацію для вивчення чеської мови, таку як: </string>
    <string name="searchdescription2">• сайти для перегляду фільмів;</string>
    <string name="searchdescription3">• сайти для відмінювання слів;</string>
    <string name="searchdescription4">• популярних чеських виконавців.</string>
    <string name="searchdescription5">Ці ресурси допоможуть в практиці та вивченні чеської мови.</string>
    <string name="singularities">Особливості форм однини</string>
    <string name="pluralfeatures">Особливості форм множини</string>
    <string name="lekce1text1">Рід іменників</string>
    <string name="lekce1text2">До <b>чоловічого</b> роду належать:</string>
    <string name="lekce1text3">a) іменники, що означають назви істот і неістот і в називному відмінку однини закінчуються на твердий або м\'який приголосний: bratr, student, otec, jazyk, stroj.</string>
    <string name="lekce1text4">б) іменники, що означають осіб чоловічої статі і закінчуються в називному відмінку однини на <b>-а, -ce, -ý, -í</b>: hrdina, starosta, soudce, cestující.</string>
    <string name="lekce1text5">До <b>жіночого</b> роду належать:</string>
    <string name="lekce1text6">a) іменники, що в називному відмінку однини закінчуються на голосні <b>-a, -e (-ě)</b>: matka, dcera, kniha, voda, hlava.</string>
    <string name="lekce1text7">б) іменники, що в називному відмінку однини закінчуються на твердий або м\'який приголосний: kost, bolest, nit, obuv, krev.</string>
    <string name="lekce1text8">в) іменники та субстантивовані прикметники, що означають осіб жіночої статі і закінчуються в називному відмінку однини на <b>-á, -í</b>: známá, nemocná.</string>
    <string name="lekce1text9">До <b>середнього</b> роду належать:</string>
    <string name="lekce1text10">а) іменники, що в називному відмінку однини закінчуються на <b>-o</b>: maso, slovo, železo.</string>
    <string name="lekce1text11">б) іменники, що в називному відмінку однини закінчуються на <b>-e (-ě)</b>: pole, ovoce, nebe.</string>
    <string name="lekce1text12">в) іменники, що в називному відмінку однини закінчуються на <b>-í</b>: nádraží, obilí, pití.</string>
    <string name="lekce1text13">г) субстантивовані прикметники, що в називному відмінку однини закінчуються на <b>-é, -í</b>: vstupné, vepřové, hovězí.</string>
    <string name="lekce1text14">Тверда і м\'яка група іменників</string>
    <string name="lekce1text15">Основа іменників твердої групи закінчується на тверді приголосні <b>n, t, d, h, ch, k, g, r, p, b, v, f, m</b>. До них належить також більша частина іменників на <b>r, l</b>.</string>
    <string name="lekce1text16">Основа іменники м\'якої групи закінчуються на м\'які приголосні <b>j, ň, ť, ď, š, ž, ř, c, č</b>, а також у деяких іменників на <b>l, z</b>.</string>
    <string name="lekce1text17">Чеські відмінки</string>
    <string name="lekce1text18">Відмінювання іменників жіночого роду твердої групи <b>(тип žena)</b></string>
    <string name="lekce1text19">За зразком відмінюються всі іменники жіночого роду, що в називному відмінку однини закінчуються на <b>-a</b> з попереднім твердим приголосним основи.</string>
    <string name="lekce1text20">а) у Dativ та Lokál відбувається пом\'якшення приголосних. Після <b>d, t, n, b, p, m, v, f</b> пишеться закінчення <b>-e</b>: voda-vodě.</string>
    <string name="lekce1text21">б) у Dativ та Lokál в іменниках з основою на <b>k, h, ch, g, r</b> перед закінченням <b>-e</b> відбувається чергування: <b>k/c</b> (matka-matce), <b>h/z</b> (kniha-knize), <b>ch/š</b> (moucha-mouše), <b>g/z</b> (Olga-Olze), <b>r/ř</b> (sestra-sestře).</string>
    <string name="lekce1text22">в) у Dativ та Lokál іменник dcera має закінчення <b>-i</b>: dcera-dceři.</string>
    <string name="lekce1text23">г) У Vokativ мають закінчення <b>-o</b>: sestra-sestro.</string>
    <string name="lekce1text24">1. У Genetiv іменники мають нульове закінчення. У групі кінцевих приголосних з\'являється вставне <b>-e</b>, а саме:</string>
    <string name="lekce1text25">а) завжди в односкладних словах: hra-her.</string>
    <string name="lekce1text26">б) часто перед <b>-k</b>: látka-látek.</string>
    <string name="lekce1text27">в) іноді перед <b>-n, -m, -v, -b, -r</b>: volba-voleb.</string>
    <string name="lekce1text28">г) іменник husa має паралельні форми hus/husí.</string>
    <string name="lekce1text29">2. У  деяких двоскладних іменниках у Genetiv чергуються кореневі голосні: <b>á/a</b> (dáma-dam), <b>í/i/ě</b> (síla-sil), <b>ou/u</b> (houba-hub).</string>
    <string name="lekce1text30">3. У Akuzativ завжди мають закінчення <b>-y</b>.</string>
    <string name="lekce1text31">Дієслова kupovat, krýt</string>
    <string name="lekce1text32">За зразком відмінюються всі дієслова, які в інфінітиві мають суфікс <b>ova</b>, а в основі теперішнього часу суфікс <b>uj</b>.</string>
    <string name="lekce1text33">За зразком дієслів цього класу відмінюється також група непродуктивних дієслів типу <b>krýt</b>, у яких основа теперішнього часу має суфікс <b>j</b>.</string>
    <string name="lekce7text1">Відмінювання іменників чоловічого роду м\'якої групи (тип muž, stroj)</string>
    <string name="lekce7text2">За зразком відмінюються всі іменники чоловічого роду м\'якої групи які в Nominativ однини закінчуються на м\'який приголосний або на <b>z, s, l, x.</b></string>
    <string name="lekce7text3">1. У Genetiv мають закінчення <b>-e</b> (muže, stroje).</string>
    <string name="lekce7text4">2. У Genetiv в односкладних словах скорочується кореневе <b>-ů</b> (hnůj-hnoje).</string>
    <string name="lekce7text5">3. У Genetiv в словах на <b>-ec, -eň, -el</b> випадає <b>e</b> (otec-otce).</string>
    <string name="lekce7text6">4. У Dativ та Lokál іменники, що означають назви істот, як правило, мають закінчення <b>-i</b> (lékaři, příteli). Закінчення <b>-ovi</b> мають прізвища.</string>
    <string name="lekce7text7">5. У Vokativ регулярним є закінчення <b>-i</b> (muži!). Слова на <b>-ec</b> мають закінчення <b>-e</b>, перед яким відбувається чергування <b>c/č</b>.</string>
    <string name="lekce7text8">1. У Nominativ іменники мають три закінчення <b>-i, -ové, -é</b>. Поширеним є закінчення <b>-i</b> (chlapec-chlapci). Закінчення <b>-ové</b> мають прізвища та імена, деякі слова на позначення родових стосунків. Закінчення <b>-é</b> мають іменники на <b>-tel</b>.</string>
    <string name="lekce7text9">2. У Genetiv деякі слова мають нульове закінчення або закінчення <b>-ů</b> (obyvatel-obyvatel/obyvatelů).</string>
    <string name="lekce7text10">3. У Akuzativ іменники, що означають істот і неістот, мають однакове закінчення <b>-e</b>.</string>
    <string name="lekce7text11">Утворення дієприкметників минулого часу на -l</string>
    <string name="lekce7text12">1. Від дієслів типу <b>nést, brát, psát</b> дієприкметники на <b>-l</b> утворюються від основи теперішнього часу, довгий кореневий голосний інфінітива скорочується.</string>
    <string name="lekce7text13">2. Якщо у дієслів на <b>-nout</b> суфікс <b>-nou</b> стоїть після приголосного(тип <b>tisknout</b>), то у дієприкметниковій формі на <b>-l</b> він зникає (tisknout-tiskl).</string>
    <string name="lekce7text14">3. Якщо у дієслів на <b>-nout</b> суфікс <b>-nou</b> стоїть після голосного(тип <b>minout</b>), то у дієприкметниковій формі на <b>-l</b> з\'являється суфікс <b>-nu</b> (minout-minul).</string>
    <string name="lekce7text15">4. У деяких дієслів довгий голосний основи інфінітива у формах дієприкметника на <b>-l</b> не скорочується (bát se-bál se).</string>
    <string name="lekce7text16">Прийменники mezi, pro</string>
    <string name="lekce7text17">Прийменник <b>mezi</b> у просторовому значенні вживається з Instrumentál. Також може вживатися з Akuzativ.</string>
    <string name="lekce7text18">Прийменник <b>pro</b> вживається з Akuzativ та виражає 3 значення. Дію на користь кого чого. Причину, мотивацію дії. Мету дії.</string>
    <string name="lekce7text19">Сполучники proto, protože</string>
    <string name="lekce7text20">Сполучник <b>proto</b> (тому) виражає наслідок дії у складносурядному реченні.</string>
    <string name="lekce7text21">Сполучник <b>protože</b> (тому що, через те що) виражає причину дії у складнопідрядному реченні.</string>
</resources>