<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstLectureActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text4"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop ="5dp"
                android:text="@string/lekce1text5"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text7"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text8"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_marginTop ="5dp"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text9"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text10"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text11"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text12"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text13"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lekce1text14"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text15"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text16"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lekce1text17"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/thecase" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lekce1text18"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text19"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/padyzena" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singularities"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text20"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text21"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text22"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text23"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pluralfeatures"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text24"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text25"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text26"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text27"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text28"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text29"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text30"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lekce1text31"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text32"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button52"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/volume" />

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/kupovat" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lekce1text33"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>